--- a/liBlog/templates/_partials/footer.html
+++ b/liBlog/templates/_partials/footer.html
@@ -39,7 +39,8 @@
   <div class="footer-copyright">
     <div class="container">
       <div class="text-center">
-         PyLixm © 2015 - 2018  Power by <a href="https://www.djangoproject.com/">Django 1.11LTS </a>
+        <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1273852821'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1273852821%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+        PyLixm © 2015 - 2018 Power by <a href="https://www.djangoproject.com/">Django 1.11LTS </a> and <a href="https://github.com/pylixm/liBlog">liBlog</a>
       </div>
     <!--<a class="grey-text text-lighten-4 right" href="#!">More Links</a>-->
     </div>
