add google addsense

--- a/liBlog/templates/base.html
+++ b/liBlog/templates/base.html
@@ -30,6 +30,14 @@
   <link href="/static/css/pygments.css" rel="stylesheet">
   {% block css %}{% endblock %}
 {% endcompress %}
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4123451200170531",
+    enable_page_level_ads: true
+  });
+</script>
+
 </head>
 
 <body>
