--- a/liBlog/templates/base.html
+++ b/liBlog/templates/base.html
@@ -14,6 +14,7 @@
   <meta name="description" content="{{ site_ext.description }}">
   <meta name="author" content="pylixm">
   <meta name="baidu-site-verification" content="rlwA1axcI9"/>
+  <meta name="baidu_union_verify" content="454704e7a01260cd63b7abafb1fa2ca7">
   <link rel="icon" href="/static/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
