--- a/liBlog/templates/_macro/sidebar_index.html
+++ b/liBlog/templates/_macro/sidebar_index.html
@@ -15,14 +15,18 @@
       {% endfor %}
     </div>
   </div>
-{#  <div class="card z-depth-0">#}
-{#    <div class="card-content">#}
-{#      <div class="card-title">#}
-{#      备用#}
-{#      </div>#}
-{#      <p>I am a very simple full width blog post. I am good at containing small bits of information. I am#}
-{#        convenient because I require little markup to use effectively.</p>#}
-{#    </div>#}
-{#  </div>#}
+  <div class="card z-depth-0">
+    <div class="card-content">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- 首页右下 -->
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:336px;height:280px"
+           data-ad-client="ca-pub-4123451200170531"
+           data-ad-slot="4990845727"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+  </div>
   <!-- /.blog-sidebar -->
 </div>
