--- a/liBlog/templates/_partials/footer.html
+++ b/liBlog/templates/_partials/footer.html
@@ -17,7 +17,7 @@
           最近一次更新网站代码是{{ last_publish_days }}天前。
         </div>
       </div>
-      <div class="col l3  s12">
+      <div class="col l2  s12">
         <h5 class="white-text">联系作者</h5>
         <ul>
           {% for item in site_ext.contact  %}
@@ -26,7 +26,11 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="col l3  s12">
+      <div class="col l2  s12">
+        <h5 class="white-text">公众号</h5>
+        <img src="/static/imgs/wechat_gzh.png" width="100" height="100">
+      </div>
+      <div class="col l2  s12">
         <h5 class="white-text">友情链接</h5>
         <ul>
           {% for item in site_ext.links %}
