--- a/liBlog/templates/_macro/sidebar_index.html
+++ b/liBlog/templates/_macro/sidebar_index.html
@@ -15,6 +15,21 @@
       {% endfor %}
     </div>
   </div>
+
+  <div class="card z-depth-0">
+    <div class="card-content">
+        <div class="card-title">
+            最新福利
+        </div>
+        <div >
+            <img class="responsive-img" src="https://ss2.bdstatic.com/8_V1bjqh_Q23odCf/pacific/1309544718.jpg">
+            <a class="red-text" href="https://promotion.aliyun.com/ntms/act/vm/aliyun-group/buy.html?group=ADgcNfxaFd">
+                阿里云新人福利，2核4G 699元</a>
+        </div>
+    </div>
+  </div>
+  <!-- /.blog-sidebar -->
+
 {#  <div class="card z-depth-0">#}
 {#    <div class="card-content">#}
 {#      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>#}
