--- a/liBlog/templates/_macro/sidebar_index.html
+++ b/liBlog/templates/_macro/sidebar_index.html
@@ -24,7 +24,7 @@
         <div >
             <img class="responsive-img" src="https://ss2.bdstatic.com/8_V1bjqh_Q23odCf/pacific/1309544718.jpg">
             <a class="red-text" href="https://promotion.aliyun.com/ntms/act/vm/aliyun-group/buy.html?group=ADgcNfxaFd">
-                阿里云新人福利，2核4G 699元</a>
+                阿里云新人福利，2核4G 699元3年</a>
         </div>
     </div>
   </div>
