--- a/liBlog/templates/_macro/sidebar_index.html
+++ b/liBlog/templates/_macro/sidebar_index.html
@@ -3,6 +3,7 @@
   <div class="card z-depth-0">
     <div class="card-content">
       <p><script src='//w.segmentfault.com/card/1030000004045770.js?w=0&3rd=0&bg=0&bd=0&cl=333333&btn=009a61&noBtn=0'></script></p>
+      <a id="wb_card_alone" wb_screen_name="woiweb" href="#">woiweb</a>
     </div>
   </div>
   <div class="card z-depth-0">
