--- a/liBlog/templates/blogs/post.html
+++ b/liBlog/templates/blogs/post.html
@@ -50,6 +50,9 @@
           href="{% url 'tag' tag %}">{{ tag }}</a></li>
       {% endfor %}
     </ul>
+    <wb:share-button appkey="4147376535" addition="text" type="button" ralateUid="2258086637"
+                     pic="https%3A%2F%2Fwx3.sinaimg.cn%2Fsquare%2F8697aaedgy1fzdd3g68oqj2074074dg5.jpg">
+    </wb:share-button>
   </div>
 </div>
 
