--- a/liBlog/templates/_macro/sidebar_index.html
+++ b/liBlog/templates/_macro/sidebar_index.html
@@ -2,47 +2,50 @@
 <div class="sidebar">
   <div class="card z-depth-0">
     <div class="card-content">
-      <p><script src='//w.segmentfault.com/card/1030000004045770.js?w=0&3rd=0&bg=0&bd=0&cl=333333&btn=009a61&noBtn=0'></script></p>
-      <a id="wb_card_alone" wb_screen_name="woiweb" href="#">woiweb</a>
+{#      <p>#}
+{#        <script src='//w.segmentfault.com/card/1030000004045770.js?w=0&3rd=0&bg=0&bd=0&cl=333333&btn=009a61&noBtn=0'></script>#}
+{#      </p>#}
+      <div id="wb_follow_btn"></div>
+{#      <wb:show uid="2258086637" fans="0" width="220" height="400" ></wb:show>#}
     </div>
   </div>
   <div class="card z-depth-0">
     <div class="card-content">
       <div class="card-title">
-      热门标签
+        热门标签
       </div>
       {% for tag in sidbar_tag_list %}
-      <div class="chip"><a href="{% url 'tag' tag.name %}">{{ tag.name }}({{ tag.post_count }})</a></div>
+        <div class="chip"><a href="{% url 'tag' tag.name %}">{{ tag.name }}({{ tag.post_count }})</a></div>
       {% endfor %}
     </div>
   </div>
 
-{#  <div class="card z-depth-0">#}
-{#    <div class="card-content">#}
-{#        <div class="card-title">#}
-{#            最新福利#}
-{#        </div>#}
-{#        <div >#}
-{#            <img class="responsive-img" src="https://ss2.bdstatic.com/8_V1bjqh_Q23odCf/pacific/1309544718.jpg">#}
-{#            <a class="red-text" href="https://promotion.aliyun.com/ntms/act/vm/aliyun-group/buy.html?group=ADgcNfxaFd">#}
-{#                阿里云新人福利，2核4G 699元3年</a>#}
-{#        </div>#}
-{#    </div>#}
-{#  </div>#}
+  {#  <div class="card z-depth-0">#}
+  {#    <div class="card-content">#}
+  {#        <div class="card-title">#}
+  {#            最新福利#}
+  {#        </div>#}
+  {#        <div >#}
+  {#            <img class="responsive-img" src="https://ss2.bdstatic.com/8_V1bjqh_Q23odCf/pacific/1309544718.jpg">#}
+  {#            <a class="red-text" href="https://promotion.aliyun.com/ntms/act/vm/aliyun-group/buy.html?group=ADgcNfxaFd">#}
+  {#                阿里云新人福利，2核4G 699元3年</a>#}
+  {#        </div>#}
+  {#    </div>#}
+  {#  </div>#}
   <!-- /.blog-sidebar -->
 
-{#  <div class="card z-depth-0">#}
-{#    <div class="card-content">#}
-{#      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>#}
-{#      <!-- 首页右下 -->#}
-{#      <ins class="adsbygoogle"#}
-{#           style="display:inline-block;width:336px;height:280px"#}
-{#           data-ad-client="ca-pub-4123451200170531"#}
-{#           data-ad-slot="4990845727"></ins>#}
-{#      <script>#}
-{#      (adsbygoogle = window.adsbygoogle || []).push({});#}
-{#      </script>#}
-{#    </div>#}
-{#  </div>#}
+  {#  <div class="card z-depth-0">#}
+  {#    <div class="card-content">#}
+  {#      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>#}
+  {#      <!-- 首页右下 -->#}
+  {#      <ins class="adsbygoogle"#}
+  {#           style="display:inline-block;width:336px;height:280px"#}
+  {#           data-ad-client="ca-pub-4123451200170531"#}
+  {#           data-ad-slot="4990845727"></ins>#}
+  {#      <script>#}
+  {#      (adsbygoogle = window.adsbygoogle || []).push({});#}
+  {#      </script>#}
+  {#    </div>#}
+  {#  </div>#}
   <!-- /.blog-sidebar -->
 </div>
