--- a/liBlog/templates/_macro/sidebar_index.html
+++ b/liBlog/templates/_macro/sidebar_index.html
@@ -7,6 +7,7 @@
 {#      </p>#}
       <div id="wb_follow_btn"></div>
 {#      <wb:show uid="2258086637" fans="0" width="220" height="400" ></wb:show>#}
+      <wb:follow-button uid="2258086637" type="red_4" >关注按钮</wb:follow-button>
     </div>
   </div>
   <div class="card z-depth-0">
